--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -1,9 +1,9 @@
 
 <div class="col custom-col">
-  <h1 style="font-size:16px;">LIST NAME</h1>
+  <h1 style="font-size:16px;">{{list.name}}</h1>
 
   <!-- List Card Starts -->
-  <app-card-summary *ngFor="let card of this.cards" [card]="card"></app-card-summary>
+  <app-card-summary *ngFor="let card of this.list.cards" [card]="card"></app-card-summary>
 
   <!-- List Card Ends -->
 
