--- a/src/app/components/board/board/board.component.html
+++ b/src/app/components/board/board/board.component.html
@@ -9,7 +9,7 @@
 
 
     <div class="col custom-col" style="background-color:#F5F5F5;margin:10px;padding:15px;padding-top:15px;padding-bottom:15px;border-top:solid 5px blue;width:15%;/*background-color:#fefefe;*/">
-    <h6 class="text-center add-new-list" >Add new card...</h6>
+    <h6 class="text-center add-new-list" (click)="addList('New List')" >Add new card...</h6>
   </div>
   </div>
 </div>
