--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -10,5 +10,5 @@
   <!-- List Card Ends -->
 
 
-  <h6 class="text-center add-new-card" >Add new item...</h6>
+  <h6 class="text-center add-new-card" (click)="addNewCard()" >Add new item...</h6>
 </div>
