--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -1,7 +1,9 @@
 
 <div class="col custom-col">
-  <h1 style="font-size:16px;" *ngIf="!headingEditMode" class="list-name" (click)="clickedInside($event)">{{list.name}}</h1>
-  <h1 style="font-size:16px;" class="editable-list-name" *ngIf="headingEditMode" ><input type="text" [(ngModel)]="list.name" /> </h1>
+  <!-- <h1 style="font-size:16px;" *ngIf="!headingEditMode" class="list-name" (click)="clickedInside($event)">{{list.name}}</h1>
+  <h1 style="font-size:16px;" class="editable-list-name" *ngIf="headingEditMode" ><input type="text" [(ngModel)]="list.name" /> </h1> -->
+
+  <inine-edit [(name)]="list.name" ></inine-edit>
 
 
   <!-- List Card Starts -->
@@ -9,6 +11,6 @@
 
   <!-- List Card Ends -->
 
-
+      {{list.name}}
   <h6 class="text-center add-new-card" (click)="addNewCard()" >Add new item...</h6>
 </div>
