--- a/src/app/components/board/card/summary/summary.component.html
+++ b/src/app/components/board/card/summary/summary.component.html
@@ -1,7 +1,8 @@
 <div class="card">
   <div class="card-body">
-    <h4 class="card-title">{{card.header}}</h4>
+
+    <h4 class="card-title"><inline-edit [(name)]="card.header" ></inline-edit>  </h4>
     <h6 class="text-muted card-subtitle mb-2">{{card.summary}}</h6>
-    <p class="card-text">{{card.description}}</p>
+    
   </div>
 </div>
