--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -3,7 +3,7 @@
   <!-- <h1 style="font-size:16px;" *ngIf="!headingEditMode" class="list-name" (click)="clickedInside($event)">{{list.name}}</h1>
   <h1 style="font-size:16px;" class="editable-list-name" *ngIf="headingEditMode" ><input type="text" [(ngModel)]="list.name" /> </h1> -->
 
-  <inine-edit [(name)]="list.name" ></inine-edit>
+  <inline-edit [(name)]="list.name" ></inline-edit>
 
 
   <!-- List Card Starts -->
