--- a/src/app/components/board/card/summary/summary.component.html
+++ b/src/app/components/board/card/summary/summary.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
 
     <h4 class="card-title"><inline-edit [(name)]="card.header" [editableClass]="'card-title'" ></inline-edit>  </h4>
-    <h6 class="text-muted card-subtitle mb-2">{{card.summary}}</h6>
+    <h6 class="text-muted card-subtitle mb-2"><inline-edit [(name)]="card.summary" [editableClass]="'card-subtitle text-muted'" ></inline-edit></h6>
     
   </div>
 </div>
