--- a/src/app/components/board/card/summary/summary.component.html
+++ b/src/app/components/board/card/summary/summary.component.html
@@ -1,4 +1,4 @@
-<div class="card" cdkDrag >
+<div class="card"  >
   <div class="card-body">
     <h4 class="card-title" [(appContentEdit)]="card.header">  </h4>
     <h6 class="text-muted card-subtitle mb-2" [(appContentEdit)]="card.summary" ></h6>
