--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -1,10 +1,10 @@
 
-<div class="col custom-col list-drag-component" (dragover)="allowCardReplacement($event)" (drop)="dropCard($event)" >
+<div class="col custom-col list-drag-component" (dragover)="allowCardReplacement($event)" (drop)="dropCard($event)"  id="list-{{listIndex}}" >
   <p class="list-name"  [(appContentEdit)]="list.name"></p>
 
   <!-- List Card Starts -->
   <div    id="list-one"  >
-    <app-card-summary *ngFor="let card of this.list.cards" [card]="card" ></app-card-summary>
+    <app-card-summary *ngFor="let card of this.list.cards;let i = index" [card]="card" [listIndex]="listIndex" [cardIndex]="i" ></app-card-summary>
   </div>
   <!-- List Card Ends -->
   <h6 class="text-center add-new-card" (click)="addNewCard()" >Add new item...</h6>
