--- a/src/app/components/board/board/board.component.html
+++ b/src/app/components/board/board/board.component.html
@@ -5,7 +5,7 @@
 
   <div class="row" style="height:inherit;">
 
-    <app-list *ngFor="let list of lists"  [list]="list"></app-list>
+    <app-list *ngFor="let list of lists;let i = index"  [list]="list" [listIndex]="i"></app-list>
 
 
     <div class="col custom-col" style="background-color:#F5F5F5;margin:10px;padding:15px;padding-top:15px;padding-bottom:15px;border-top:solid 5px blue;width:15%;/*background-color:#fefefe;*/">
