--- a/src/app/components/board/card/summary/summary.component.html
+++ b/src/app/components/board/card/summary/summary.component.html
@@ -1,6 +1,6 @@
 <div class="card" [draggable]="'true'" (dragstart)="identifyCardBeingDragged($event)"  id="list-{{listIndex}}-card-{{cardIndex}}" attr.listIndex="{{listIndex}}" attr.cardIndex="{{cardIndex}}" (dragover)="allowCardDragToBeDropped($event)" >
   <div class="card-body">
-    <h4 class="card-title" [(appContentEdit)]="card.header">  </h4>
-    <h6 class="text-muted card-subtitle mb-2" [(appContentEdit)]="card.summary" ></h6>
+    <h4 class="card-title" [(appContentEdit)]="card.header" [draggable]="'false'" >  </h4>
+    <h6 class="text-muted card-subtitle mb-2" [(appContentEdit)]="card.summary" [draggable]="'false'" ></h6>
   </div>
 </div>
