--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -1,5 +1,5 @@
 
-<div class="col custom-col list-drag-component" (dragover)="allowCardReplacement($event)" (drop)="dropCard($event)"  id="list-{{listIndex}}" >
+<div class="list col custom-col list-drag-component" (dragover)="allowCardReplacement($event)" (drop)="dropCard($event)"  id="list-{{listIndex}}" >
   <p class="list-name"  [(appContentEdit)]="list.name"></p>
 
   <!-- List Card Starts -->
