--- a/src/app/components/board/board/board.component.html
+++ b/src/app/components/board/board/board.component.html
@@ -1,17 +1,12 @@
 <div class="container" style="max-width:inherit;width:auto;height:100%;">
-
-
-
-
   <div class="row" style="height:inherit;">
-
-    <app-list *ngFor="let list of lists;let i = index"  [list]="list" [listIndex]="i" (moveCardAcrossList)="moveCardAcrossList($event)"
-    attr.listIndex="{{i}}"
+    <app-list *ngFor="let list of lists;let i = index" [list]="list" [listIndex]="i"
+              (moveCardAcrossList)="moveCardAcrossList($event)"
+              attr.listIndex="{{i}}"
     ></app-list>
-
-
-    <div class="col custom-col" style="background-color:#F5F5F5;margin:10px;padding:15px;padding-top:15px;padding-bottom:15px;border-top:solid 5px blue;width:15%;/*background-color:#fefefe;*/">
-    <h6 class="text-center add-new-list" (click)="addList('New List')" >Add new card...</h6>
-  </div>
+    <div class="col custom-col"
+         style="background-color:#F5F5F5;margin:10px;padding:15px;padding-top:15px;padding-bottom:15px;border-top:solid 5px blue;width:15%;/*background-color:#fefefe;*/">
+      <h6 class="text-center add-new-list" (click)="addList('New List')">Add new card...</h6>
+    </div>
   </div>
 </div>
