--- a/src/app/components/board/board/board.component.html
+++ b/src/app/components/board/board/board.component.html
@@ -1,4 +1,8 @@
 <div class="container" style="max-width:inherit;width:auto;height:100%;">
+  <div class="row">
+    <div class="col-11"></div>
+    <div class="col"><button (click)="saveBoard()">Save</button></div>
+  </div>
   <div class="row" style="height:inherit;">
     <app-list *ngFor="let list of lists;let i = index" [list]="list" [listIndex]="i"
               (moveCardAcrossList)="moveCardAcrossList($event)"
