--- a/src/app/components/board/board/board.component.css
+++ b/src/app/components/board/board/board.component.css
@@ -1,11 +1,11 @@
 .text-center.add-new-list:hover {
   opacity:0.9;
-  color:#767676;
+  color:#40409A;
 }
 
 .text-center.add-new-list {
   font-size:14px;
-  color:#A6A6A6;
+  color:#767676;
   cursor:pointer;
   opacity:0.4;
 }
