--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -1,5 +1,6 @@
 
-<div class="list col custom-col list-drag-component" (dragover)="allowCardReplacement($event)" (drop)="dropCard($event)"  id="list-{{listIndex}}" >
+<div class="list col custom-col list-drag-component" (dragover)="allowCardReplacement($event)" (drop)="dropCard($event)"  id="list-{{listIndex}}"  >
+  <app-context-menu (click)="delete()"></app-context-menu>
   <p class="list-name"  [(appContentEdit)]="list.name"></p>
 
   <!-- List Card Starts -->
@@ -7,5 +8,5 @@
     <app-card-summary  *ngFor="let card of this.list.cards;let i = index" [card]="card" [listIndex]="listIndex" [cardIndex]="i" attr.cardIndex="{{i}}" ></app-card-summary>
   </div>
   <!-- List Card Ends -->
-  <h6 class="text-center add-new-card" (click)="addNewCard()" >Add new item...</h6>
+  <h6 class="text-center add-new-card" (click)="addNewCard()" >Add new card...</h6>
 </div>
