--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -1,6 +1,6 @@
 
 <div class="list col custom-col list-drag-component" (dragover)="allowCardReplacement($event)" (drop)="dropCard($event)"  id="list-{{listIndex}}"  >
-  <app-context-menu (click)="delete()"></app-context-menu>
+  <app-context-menu ></app-context-menu>
   <p class="list-name"  [(appContentEdit)]="list.name"></p>
 
   <!-- List Card Starts -->
@@ -9,4 +9,7 @@
   </div>
   <!-- List Card Ends -->
   <h6 class="text-center add-new-card" (click)="addNewCard()" >Add new card...</h6>
+
+
+
 </div>
