--- a/src/app/components/common/contextmenu/context-menu.component.html
+++ b/src/app/components/common/contextmenu/context-menu.component.html
@@ -7,7 +7,8 @@
     </svg>
   </div>
   <div *ngIf="show">
-    <div class="dropdown-menu dropdown-menu-sm show" style="position: absolute;top: 5px;left: inherit;right: 0px;">
+    <div class="dropdown-menu dropdown-menu-sm show" style="position: absolute;top: 5px;left: inherit;right: 0px;padding: .15rem 0;margin: .125rem 0 0;font-size: 0.8rem;min-width: 5rem;">
+      
       <a class="dropdown-item" href="#" (click)="emitCloseEvent()">Delete</a>
     </div>
   </div>
