--- a/src/app/components/board/list/list.component.css
+++ b/src/app/components/board/list/list.component.css
@@ -1,11 +1,12 @@
 .col {
   background-color: #F5F5F5;
-  margin: 15px;
-  padding-left: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin: 0px;
+  padding: 5px;
+  /* padding-top: 10px;
+  padding-bottom: 10px; */
   border-top: solid 5px blue;
   max-width: 270px;
+  
 }
 
 .text-center.add-new-card:hover {
