--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -1,6 +1,6 @@
 
 <div class="list col custom-col list-drag-component" (dragover)="allowCardReplacement($event)" (drop)="dropCard($event)"  id="list-{{listIndex}}"  >
-  <app-context-menu ></app-context-menu>
+  <app-context-menu (contextAction)="delete()" ></app-context-menu>
   <p class="list-name"  [(appContentEdit)]="list.name"></p>
 
   <!-- List Card Starts -->
