--- a/src/app/components/board/board/board.component.html
+++ b/src/app/components/board/board/board.component.html
@@ -11,7 +11,7 @@
     ></app-list>
     <div class="col custom-col"
          style="margin:10px;padding:15px;padding-top:15px;padding-bottom:15px;">
-      <h6 class="text-center add-new-list" (click)="addList('New List')">Add new item...</h6>
+      <h6 class="text-center add-new-list" (click)="addList()">Add new item...</h6>
     </div>
   </div>
 </div>
