--- a/src/app/components/board/list/list.component.html
+++ b/src/app/components/board/list/list.component.html
@@ -1,5 +1,5 @@
 
-<div class="list col custom-col list-drag-component"      >
+<div class="list col custom-col list-drag-component"  cdkDrag  cdkDragLockAxis="x"    >
   <app-context-menu cdkDragHandle (contextAction)="delete()" ></app-context-menu>
 
 
